--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/style.css">
+    <!-- Icones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>HDC - HOST</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="navbar-container">
+            <nav>
+                <a href="#" >
+                    <img src="IMG/banco-de-dados-seguro.png" alt="image-logo" class="logo">
+                </a>
+                <ul class="navbar-itens">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Preços</a>
+                    </li>
+                    <li>
+                        <a href="#">Contatos</a>
+                    </li>
+                    <li>
+                        <a href="#" class="default-btn">Entrar</a>
+                    </li>
+                </ul>
+            </nav>
+            <main>
+                <div class="container-banner">
+                    <h1>HDC - Host</h1>
+                    <p>Os melhores serviços para projetos de todos os tamanhos!</p>
+                </div>
+
+            </main>
+
+        </div>
+    </div>
 </body>
 </html>
