--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
                     </li>
                 </ul>
             </nav>
-            <main>
-                <div class="container-banner">
+        </div>
+        <main>
+                <div class="main-banner">
                     <h1>HDC - Host</h1>
                     <p>Os melhores serviços para projetos de todos os tamanhos!</p>
                 </div>
 
             </main>
-
-        </div>
     </div>
 </body>
 </html>
