--- a/index.html
+++ b/index.html
@@ -32,12 +32,43 @@
             </nav>
         </div>
         <main>
-                <div class="main-banner">
-                    <h1>HDC - Host</h1>
-                    <p>Os melhores serviços para projetos de todos os tamanhos!</p>
-                </div>
-
-            </main>
+            <div class="main-banner">
+                <h1>HDC - Host</h1>
+                <p>Os melhores serviços para projetos de todos os tamanhos!</p>
+             </div>
+        </main>
+        <!-- Funciona como se fosse uma Div -->
+        <section class="service-container">
+            <ul>
+                <li>
+                    <i class="fas fa-shield-alt"></i>
+                    <h3>Segurança</h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quaerat, iusto dolore 
+                        eum eligendi numquam nemo doloribus labore a fuga cumque corporis eos illo modi ea 
+                        molestias enim architecto ipsum!
+                    </p>
+                </li>
+                <li>
+                    <i class="fas fa-rocket"></i>
+                    <h3>Performance</h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quaerat, iusto dolore 
+                        eum eligendi numquam nemo doloribus labore a fuga cumque corporis eos illo modi ea 
+                        molestias enim architecto ipsum!
+                    </p>
+                </li>
+                <li>
+                    <i class="fas fa-comments"></i>
+                    <h3>Suporte 24/7</h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quaerat, iusto dolore 
+                        eum eligendi numquam nemo doloribus labore a fuga cumque corporis eos illo modi ea 
+                        molestias enim architecto ipsum!
+                    </p>
+                </li>
+            </ul>
+        </section>
     </div>
 </body>
 </html>
