--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
                 <div class="plans-container">
                     <div class="plan">
                         <ul>
-                            <li class="price-recommender">R$15/Mês</li>
+                            <li class="price">R$15/Mês</li>
                             <li class="plan-name">Basico</li>
                             <li >2GB de espaço</li>
+                            <li>1 Subdomínio</li>
                             <li >25 contas de e-mail</li>
                             <li >C-panel</li>
                             <li >Suporte 24/7</li>
@@ -87,7 +88,7 @@
                     </div>
                     <div class="plan">
                         <ul>
-                            <li class="price-recommender">R$30/Mês</li>
+                            <li class="price">R$30/Mês</li>
                             <li class="plan-name">Dedicado</li>
                             <li >2GB de espaço</li>
                             <li>10 Subdomínio</li>
@@ -100,10 +101,10 @@
                     </div>
                     <div class="plan">
                         <ul>
-                            <li class="price-recommender">R$50/Mês</li>
+                            <li class="price">R$50/Mês</li>
                             <li class="plan-name">Dedicado plus</li>
                             <li >10 GB de espaço</li>
-                            <li>10 Subdomínios</li>
+                            <li>20 Subdomínios</li>
                             <li >100 contas de e-mail</li>
                             <li >C-panel</li>
                             <li >Suporte 24/7</li>
@@ -113,10 +114,10 @@
                     </div>
                     <div class="plan">
                         <ul>
-                            <li class="price-recommender">R$100/Mês</li>
+                            <li class="price">R$100/Mês</li>
                             <li class="plan-name">Cloud</li>
                             <li >20 GB de espaço</li>
-                            <li>10 Subdomínios</li>
+                            <li>50 Subdomínios</li>
                             <li >200 contas de e-mail</li>
                             <li >C-panel</li>
                             <li >Suporte 24/7</li>
